Removed Judge's name from the logs.